--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <script
+      src="https://kit.fontawesome.com/d5c7de839b.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>LASHEDbySF</title>
   </head>
   <body>
@@ -464,6 +469,11 @@
     <footer>
       <div class="footerText">LashedBySF Beauty Salon © 2022. All Rights Reserved.</div>
     </footer>
+        <script
+      src="https://kit.fontawesome.com/d5c7de839b.js"
+      crossorigin="anonymous"
+    ></script>
+
     <script src="./bootstrap-5.2.0-beta1-distQQ/js/bootstrap.bundle.min.js"></script>
     <script src="./bootstrap-5.2.0-beta1-dist/js/bootstrap.js"></script>
   </body>
