--- a/lash.html
+++ b/lash.html
@@ -41,7 +41,7 @@
       </div>
     </header>
     <!-- ---------------------------NAVBAR---------- -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg position-fixed">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
           ><img src="./images/image1.jpeg" alt="brand" class="brandlogo"
