--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </header>
     <!-- ---------------------------NAVBAR---------- -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-fixed-top fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
           ><img src="./images/image1.jpeg" alt="brand" class="brandlogo"
